--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
@@ -1,88 +1,36 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
-    <div class="left">
-        <h1>O světě</h1>
-        <!-- Main content of the page -->
-        <p class="text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
-            mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
-            rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
-            ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
-            Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
-            ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
-            nisl nisl. Curabitur posuere vehicula mauris sit amet porttitor. Donec risus orci,
-            tincidunt sed laoreet eget, luctus vitae erat. Suspendisse faucibus, lectus eget feugiat
-            tristique, dui est convallis turpis, quis volutpat eros arcu ac augue. Maecenas ac velit
-            blandit, faucibus metus id, facilisis velit. Duis ultricies ipsum vitae sapien gravida
-            pellentesque. Phasellus lobortis iaculis congue.
-        </p>
+    <div class="w-col w-col-8 content">
+        <div class="left-menu" wicket:id="leftMenus">
 
-        <h3>Potřebné věci</h3>
-        <ul>
-            <li>První věc</li>
-            <li>Jedna z věcí</li>
-            <li>Co tak ještě potřebuji</li>
-            <li>Poslední nutná věc</li>
-        </ul>
+        </div>
+        <div class="middle-cotent">
+            <h1>O světě</h1>
 
-        <p class="text">
-            Aliquam sollicitudin nulla a quam dapibus, a dignissim nunc dapibus. Phasellus ac ante eget ante
-            consectetur semper ut vel elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos. Nulla ultrices nisi felis, varius elementum felis scelerisque ac. Praesent elit
-            nisl, gravida sed arcu imperdiet, fringilla lobortis urna. Nullam rutrum nisi tellus, at faucibus metus
-            ornare dictum. Integer sollicitudin erat ac mauris tincidunt pellentesque. Pellentesque justo dui,
-            placerat et molestie a, aliquam in justo. Nunc leo augue, aliquam a blandit in, hendrerit sed velit.
-        </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                erat. Aenean faucibus nibh et justo cursus
+                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
 
-        <h2>Další info</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                erat. Aenean faucibus nibh et justo cursus
+                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
 
-        <p class="text">
-            Quisque pulvinar nisi quis semper rhoncus. Fusce at diam mollis, facilisis justo ut, sodales lacus.
-            Maecenas enim dolor, sollicitudin eget consequat non, pulvinar non lorem. Pellentesque eget vehicula
-            orci. Mauris interdum sollicitudin turpis vitae iaculis. Cras est lorem, condimentum vitae ultricies id,
-            varius a odio. Nunc sodales augue consequat leo viverra, et pharetra mauris imperdiet. Sed ut adipiscing
-            neque. Duis vehicula malesuada enim. Aenean quis dapibus justo.
-        </p>
-
-        <p class="text">
-            Nam euismod, orci ut facilisis congue, augue quam ullamcorper nisi, vel sollicitudin tortor sapien non
-            est. Cras consectetur quam at purus vestibulum pulvinar et ut turpis. Suspendisse ut porta elit, eu
-            fermentum ipsum. Duis ut eros iaculis orci fermentum vehicula nec quis metus. Ut congue vel ante quis
-            tincidunt. Vestibulum tincidunt ultrices sem, at mollis orci fringilla et. In scelerisque ultrices
-            pharetra. Vestibulum scelerisque condimentum lobortis. Mauris a bibendum lacus, sed interdum purus. Sed
-            feugiat urna pulvinar laoreet vestibulum. Ut a lectus condimentum, facilisis augue mattis, egestas diam.
-            Sed condimentum viverra sem. Quisque eget ante orci. Nam vestibulum eget sem nec sollicitudin.
-        </p>
-
-        <h3>Poslední info</h3>
-
-        <p class="text">
-            Aenean dignissim tellus in arcu laoreet dictum. Aenean bibendum tristique eleifend. Phasellus leo dui,
-            volutpat eu pretium sit amet, pharetra a leo. Aliquam dapibus magna nec volutpat eleifend. Phasellus
-            dapibus elit eros. Phasellus venenatis tincidunt pretium. Integer ut molestie diam, nec malesuada urna.
-        </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                erat. Aenean faucibus nibh et justo cursus
+                id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
     </div>
+    <div class="w-col w-col-2 right-info">
+        <div class="right-menu">
+            <div class="sign-in" wicket:id="signInPanel">
 
-    <div class="right">
-        <h2>Zásadní info</h2>
-        <!-- Additional information about page -->
-        <!-- At HomePage there is information about completed characters -->
-        <!-- Last 5 inserted players -->
-        <ul>
-            <li>Jedna</li>
-            <li>Dvě</li>
-            <li>Tři</li>
-            <li>Čtyři</li>
-        </ul>
+            </div>
+            <div class="right-menu-header rotate">Novinky</div>
+            <div wicket:id="newsPanel" class="right-menu-content">
 
-        <p class="text">
-            Aenean dignissim tellus in arcu laoreet dictum. Aenean bibendum tristique eleifend. Phasellus leo dui,
-            volutpat eu pretium
-        </p>
-
-        <p class="text">
-            Duis ut eros iaculis orci fermentum vehicula nec quis metus. Ut congue vel ante quis
-            tincidunt. Vestibulum tincidunt ultrices sem, at mollis orci fringilla et. In scelerisque ultrices
-            pharetra.
-        </p>
+            </div>
+        </div>
     </div>
 </wicket:extend>
