--- a/src/main/java/org/pilirion/nakaza/components/panel/story/ListStoriesShortPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/story/ListStoriesShortPanel.html
@@ -1,7 +1,9 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div class="stories short" wicket:id="stories">
-        <div class="story short">
-            <a wicket:id="storyDetail"><span wicket:id="storyName">Story number 1</span></a>
+        <div class="right-menu-section">
+            <div class="story short">
+                <a wicket:id="storyDetail"><span wicket:id="storyName">Story number 1</span></a>
+            </div>
         </div>
     </div>
 </wicket:panel>
