--- a/src/main/java/org/pilirion/nakaza/components/page/statics/NoRights.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/NoRights.html
@@ -1,3 +1,21 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
-    <h2>You don't have access to page, you were requesting.</h2>
+    <div class="w-col w-col-8 content">
+        <div class="left-menu" wicket:id="leftMenus">
+
+        </div>
+        <div class="middle-cotent">
+            <h2>You don't have access to page, you were requesting.</h2>
+        </div>
+    </div>
+    <div class="w-col w-col-2 right-info">
+        <div class="right-menu">
+            <div class="sign-in" wicket:id="signInPanel">
+
+            </div>
+            <div class="right-menu-header rotate">Novinky</div>
+            <div wicket:id="newsPanel" class="right-menu-content">
+
+            </div>
+        </div>
+    </div>
 </wicket:extend>
