--- a/src/main/java/org/pilirion/nakaza/components/page/story/StoryDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/StoryDetail.html
@@ -1,43 +1,53 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
-    <div class="left">
-        <h1>Detail příběhu</h1>
+    <div class="w-col w-col-8 content">
+        <div class="left-menu" wicket:id="leftMenus">
 
-        <h2 wicket:id="name"></h2>
-        <div class="description" wicket:id="descriptionPublic">
-            Public description of the story
         </div>
+        <div class="middle-cotent">
+            <h1>Detail příběhu</h1>
 
-        <div class="description" wicket:id="descriptionPrivate">
-            Private description of the story. Available only if I am already part od the
-            story.
-        </div>
+            <h2 wicket:id="name"></h2>
+            <div class="description" wicket:id="descriptionPublic">
+                Public description of the story
+            </div>
 
-        <h3>Štítky charakterizující tento příběh.</h3>
+            <div class="description" wicket:id="descriptionPrivate">
+                Private description of the story. Available only if I am already part od the
+                story.
+            </div>
 
-        <div class="labels" wicket:id="labels">
-            <div class="label" wicket:id="label">Label 1</div>
-        </div>
-        <div class="clear"></div>
+            <h3>Štítky charakterizující tento příběh.</h3>
 
-        <h3>Účastníci tohoto příběhu</h3>
+            <div class="labels" wicket:id="labels">
+                <div class="label" wicket:id="label">Label 1</div>
+            </div>
+            <div class="clear"></div>
 
-        <div wicket:id="participants">
-            <div class="participant">
-                <div class="description" wicket:id="descriptionPublic"></div>
-                <div class="group">Skupina: <span wicket:id="group">Přeživší</span></div>
-                <div class="private description" wicket:id="descriptionPrivate">
-                    <!-- Shown only if I am participant and furthermore this specific one. -->
+            <h3>Účastníci tohoto příběhu</h3>
+
+            <div wicket:id="participants">
+                <div class="participant">
+                    <div class="description" wicket:id="descriptionPublic"></div>
+                    <div class="group">Skupina: <span wicket:id="group">Přeživší</span></div>
+                    <div class="private description" wicket:id="descriptionPrivate">
+                        <!-- Shown only if I am participant and furthermore this specific one. -->
+                    </div>
+                    <div class="labels" wicket:id="labels">
+                        <div class="label" wicket:id="label">Label 3</div>
+                    </div>
+
+                    <div class="clear"></div>
                 </div>
-                <div class="labels" wicket:id="labels">
-                    <div class="label" wicket:id="label">Label 3</div>
-                </div>
-
-                <div class="clear"></div>
             </div>
         </div>
     </div>
+    <div class="w-col w-col-2 right-info">
+        <div class="right-menu">
+            <div class="sign-in" wicket:id="signInPanel">
 
-    <div class="right">
-        <div wicket:id="lastAddedStories"></div>
+            </div>
+            <div class="right-menu-header rotate right-shift">Nejnovější příběhy</div>
+            <div wicket:id="lastAddedStories" class="right-menu-content"></div>
+        </div>
     </div>
 </wicket:extend>
