--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CreateOrUpdateLogged.html
@@ -1,5 +1,5 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <h1>Tvorba nové postavy</h1>
+    <h1 wicket:id="createCharacterHeader">Tvorba nové postavy</h1>
 
     <form wicket:id="character">
         <fieldset>
