--- a/src/main/java/org/pilirion/nakaza/components/panel/story/LastAddedStories.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/story/LastAddedStories.html
@@ -2,7 +2,7 @@
     <h2>Poslední přidané příběhy</h2>
 
     <div wicket:id="stories">
-        <div class="story">
+        <div class="right-menu-section">
             <span class="publicDescription">
                 <a wicket:id="storyDetail"><span wicket:id="publicDescription">Description of story</span></a>
             </span>
@@ -10,7 +10,7 @@
             <div class="labels" wicket:id="labels">
                 <div wicket:id="label" class="label">Detektivní</div>
             </div>
-            <div class="clear"></div>
         </div>
+        <div class="clear"></div>
     </div>
 </wicket:panel>
