Cleaning of application

--- a/src/main/java/org/pilirion/nakaza/components/page/character/CharacterDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/character/CharacterDetail.html
@@ -3,24 +3,8 @@
         <div class="left-menu" wicket:id="leftMenus">
 
         </div>
-        <div class="middle-cotent">
-            <h1>O vaší postavě</h1>
+        <div class="middle-cotent" wicket:id="character-detail">
 
-            <div class="avatarImage">
-                <img wicket:id="avatarImage" class="avatar" alt="AvatarHracoviPostavy"/>
-            </div>
-
-            <h2 wicket:id="name">Jméno postavy</h2>
-
-            <div class="age">Věk: <span wicket:id="age">28</span></div>
-
-            <div class="description" wicket:id="descriptionPublic">
-                Popis vaší postavy.
-            </div>
-
-            <div wicket:id="listStories">
-                <!-- It contains list of stories, you are associated with. -->
-            </div>
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
